--- a/config/database.yml
+++ b/config/database.yml
@@ -19,6 +19,7 @@ default: &default
   encoding: unicode
 
   username: postgres
+  password: Euco8785
   # For details on connection pooling, see Rails configuration guide
   # https://guides.rubyonrails.org/configuring.html#database-pooling
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
@@ -31,7 +32,7 @@ development:
   # To create additional roles in postgres see `$ createuser --help`.
   # When left blank, postgres will use the default role. This is
   # the same name as the operating system user running Rails.
-  username: WAG_Noticias
+  username: postgres
 
   # The password associated with the postgres role (username).
   password: Euco8785
